--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,5 +1,9 @@
 
+$primary: #fcaf17;
+$secondary: #38a30a;
+$dark: #060606;
+$success: #0dcaf0;
+$info: #4287f5;
+$danger: rgb(182, 16, 16);
 
-$primary: green;
-
-@import "../bootstrap/scss/bootstrap"
+@import "../bootstrap/scss/bootstrap";
