--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -21,7 +21,7 @@
                     <div class="mb-3">
                         <label for="exampleFormControlInput1" class="form-label">Email</label>
                         <input
-                            name="identification"
+                            name="email"
                             class="form-control"
                             id="exampleFormControlInput1"
                             placeholder="name@example.com"
