--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="css/specific.css">
     </head>
     <body>
+        <%- include ('partials/navbar') %>
+        <!--
         <div class="card" style="width: 19rem;">
             <div class="card-body">
                 <h5 class="card-title">Contact Form</h5>
@@ -45,5 +47,6 @@
                 >Submit</button>
             </div>
         </div>
+    -->
     </body>
 </html>
