--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,6 @@
     <link href="../css/custom.min.css" rel="stylesheet"> <!-- Bootstrap 5 custom sass file (compiled)-->
 </head>
 <body>
-    
+    <%- include ('partials/navbar') %>
 </body>
 </html>
