--- a/css/specific.css
+++ b/css/specific.css
@@ -1,13 +1,7 @@
-.card {
-    border: 4px solid #51ff00;
-    margin-left: 39.5%;
-    margin-top: 50px;
-}
-.form-label {
-    font-weight: 500;
+.contact-grid {
+    
 }
 
-.btn-lg-gradient {
-    background: linear-gradient(to right,#51ff00, yellow);
-    border: 3px solid #51ff00;
+.contact-option {
+    display: inline-block;
 }
