--- a/css/specific.css
+++ b/css/specific.css
@@ -14,4 +14,11 @@
 
 .contact-option {
     display: inline-block;
+    border: 3px solid transparent;
+
+}
+
+.contact-option:hover {
+    transform: scale(1.3);
+    box-shadow: 0px 0px 138px -38px rgba(160,160,160,1);
 }
