--- a/css/specific.css
+++ b/css/specific.css
@@ -20,6 +20,7 @@
 }
 
 .contact-option:hover {
-    transform: scale(1.3);
+    transform: scale(1.1);
     box-shadow: 0px 0px 138px -38px rgba(160,160,160,1);
+    transition: all 1s;
 }
