--- a/css/specific.css
+++ b/css/specific.css
@@ -15,12 +15,13 @@
 .contact-option {
     display: inline-block;
     border: 3px solid transparent;
-    border-radius: white;
+    border-radius: 5px;
 
 }
 
 .contact-option:hover {
     transform: scale(1.1);
     box-shadow: 0px 0px 138px -38px rgba(160,160,160,1);
-    transition: all 1s;
+    background-color: rgba(160, 160, 160, 1);
+    transition: all .5s;
 }
