--- a/css/specific.css
+++ b/css/specific.css
@@ -14,7 +14,7 @@
 
 .contact-option {
     display: inline-block;
-    border: 3px solid transparent;
+    border: 3px solid rgba(160, 160, 160, 1);;
     border-radius: 5px;
 
 }
@@ -22,6 +22,5 @@
 .contact-option:hover {
     transform: scale(1.1);
     box-shadow: 0px 0px 138px -38px rgba(160,160,160,1);
-    background-color: rgba(160, 160, 160, 1);
     transition: all .5s;
 }
