--- a/css/specific.css
+++ b/css/specific.css
@@ -14,13 +14,13 @@
 
 .contact-option {
     display: inline-block;
-    border: 3px solid rgba(160, 160, 160, 1);;
+    border: 3px solid rgb(241, 239, 239);
     border-radius: 5px;
 
 }
 
 .contact-option:hover {
     transform: scale(1.1);
-    box-shadow: 0px 0px 138px -38px rgba(160,160,160,1);
+    box-shadow: 0px 0px 120px -38px rgba(160,160,160,1);
     transition: all .5s;
 }
