--- a/css/specific.css
+++ b/css/specific.css
@@ -16,11 +16,12 @@
     display: inline-block;
     border: 3px solid rgb(241, 239, 239);
     border-radius: 5px;
+    margin: 5px;
 
 }
 
 .contact-option:hover {
     transform: scale(1.1);
-    box-shadow: 0px 0px 120px -38px rgba(160,160,160,1);
+    box-shadow: 0px 0px 120px -38px #f8f9fa;
     transition: all .5s;
 }
