--- a/css/specific.css
+++ b/css/specific.css
@@ -17,7 +17,9 @@
     border: 3px solid rgb(241, 239, 239);
     border-radius: 5px;
     margin: 5px;
+    transform: scale(1.1);
     background-color: white;
+    transition: all .5s;
 
 }
 
