--- a/css/specific.css
+++ b/css/specific.css
@@ -4,11 +4,12 @@
 }
 
 .main-bg {
-    width: 1920px;
-    height: 1080px;
-    background-image: url('/images/bg.jpg');
+    background: url(images/bg.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
-
 .window-box {
     height: 480px;
     width: 720px;
