--- a/css/specific.css
+++ b/css/specific.css
@@ -3,7 +3,7 @@
     width: 24em;
 }
 
-.main-bg {
+body {
     background: url('/images/bg.jpg') no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
