--- a/css/specific.css
+++ b/css/specific.css
@@ -3,12 +3,17 @@
     width: 24em;
 }
 
-body {
+.body-bg {
     background: url('/images/bg.jpg') no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+
+.grid-box-container {
+    background-color: white;
+    opacity: .4;
 }
 .window-box {
     height: 480px;
