Added primary variable to SASS

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,7 +1,6 @@
 // bootstrap overrides
 
-$primary: #51ff00;
-$dark: #353937;
+$primary: rgb(255, 208, 0);
 
 
 @import "../bootstrap/scss/bootstrap";
