--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,3 +8,12 @@
     width: 60%;
     padding: 10px;
 }
+
+.center-hv {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    }
+    
