--- a/css/specific.css
+++ b/css/specific.css
@@ -14,8 +14,8 @@
 .grid-box-container {
     background-color: rgba(255, 255, 255, .85);
 }
-.grid-box-container > .card {
-
+.grid-box-container > .space-5 {
+    margin: 5px;
 }
 .window-box {
     height: 480px;
