--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,5 +15,9 @@
     top: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
-    }
-    
+}
+
+.dark-elem {
+    background-color: #23272A;
+    color: white;
+}
