--- a/css/specific.css
+++ b/css/specific.css
@@ -11,6 +11,10 @@
     background-size: cover;
 }
 
+.container {
+    margin-top: 5em;
+}
+
 .grid-box-container {
     background-color: rgba(255, 255, 255, .85);
 }
